<?xml version="1.0"?>
<package format="2">
  <name>ik_constraint_joint_limit_table</name>
  <version>0.0.0</version>
  <description>The ik_constraint_joint_limit_table package</description>

  <maintainer email="hiraoka@jsk.imi.i.u-tokyo.ac.jp">Naoki-Hiraoka</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>joint_limit_table</depend>
  <depend>choreonoid</depend>
  <depend>ik_constraint</depend>

</package>
